--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 Users.txt
+SeedDataScript.cs
+SeedPricesScript/
 
 # Build results
 [Dd]ebug/
