--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 Users.txt
+RgSite TODO.txt
 SeedDataScript.cs
 SeedPricesScript/
 
