--- a/RgSite/appsettings.json
+++ b/RgSite/appsettings.json
@@ -7,5 +7,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Stripe": {
+    "PublicKey": "pk_test_KYRRRqCY7HwGpUNOR5nOltSt00uZB1SJ9v",
+    "SecretKey": "sk_test_9FPmFJV7imhW8gLmCMlCEi1G00tW5wXY0T"
+  }
 }
