--- a/RgSite/RgSite.csproj
+++ b/RgSite/RgSite.csproj
@@ -22,8 +22,9 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\RgSite.Core\RgSite.Core.csproj" />
     <ProjectReference Include="..\RgSite.Data\RgSite.Data.csproj" />
-    <ProjectReference Include="..\RgSite.Service\RgSite.Service.csproj" />
+    <ProjectReference Include="..\RgSite.Service\RgSite.Core.csproj" />
   </ItemGroup>
 
 </Project>
