--- a/RgSite/appsettings.json
+++ b/RgSite/appsettings.json
@@ -10,6 +10,43 @@
   "AllowedHosts": "*",
   "Stripe": {
     "PublicKey": "pk_test_KYRRRqCY7HwGpUNOR5nOltSt00uZB1SJ9v",
-    "SecretKey": "sk_test_9FPmFJV7imhW8gLmCMlCEi1G00tW5wXY0T"
+    "SecretKey": "sk_test_9FPmFJV7imhW8gLmCMlCEi1G00tW5wXY0T",
+    "WebHookSecret": "whsec_JXPpYFWz88NfDGX5wRhza6VYmY9IytdH",
+    "WebHookSecretDebug": "whsec_iy4TSYpEyJZ7RIdJDsRYpW3lBtmIm1BE"
+  },
+  "SendGrid": {
+    "SendGridUser": "",
+    "SendGridKey": "",
+    "FromEmail": ""
+  },
+  "EasyPost": "EZTKfa26781eaa1f41d09eac686b9ccf7426XUhexh43ZJ8wlYjWwB0lDw",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Error"
+      }
+    }
+    //"WriteTo": [
+    //  {
+    //    "Name": "MSSqlServer",
+    //    "Args": {
+    //      "connectionString": "DefaultConnection",
+    //      "sinkOptionsSection": {
+    //        "tableName": "ErrorLogs",
+    //        "autoCreateSqlTable": true
+    //      },
+    //      "restrictedToMinimumLevel": "Information",
+    //      "columnOptionsSection": {
+    //        "timeStamp": {
+    //          "columnName": "Timestamp",
+    //          "convertToUtc": true
+    //        }
+    //      }
+    //    }
+    //  }
+    //]
   }
 }
