--- a/RgSite.Core/RgSite.Core.csproj
+++ b/RgSite.Core/RgSite.Core.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\RgSite.Data\RgSite.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
