--- a/RgSite.Core/RgSite.Core.csproj
+++ b/RgSite.Core/RgSite.Core.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+	<PackageReference Include="Stripe.net" Version="39.34.0" />
+	<PackageReference Include="EasyPost-Official" Version="2.5.1.3" />
   </ItemGroup>
 
   <ItemGroup>
